src/test/ui/issues/issue-42755.stderr
error: `$p:vis` is followed (through repetition) by itself, which is not allowed for `vis` fragments
  --> $DIR/issue-42755.rs:13:8
   |
LL |     ($($p:vis)*) => {}
   |        ^^^^^^ this fragment is followed by itself without a valid separator
   |
   = note: allowed there are: `,`, an ident or a type
help: add a valid separator for the repetition to be unambiguous, for example
   |
LL |     ($($p:vis),*) => {}
   |               ^

error: repetition matches empty token tree
  --> $DIR/issue-42755.rs:13:7
   |
LL |     ($($p:vis)*) => {}
   |       ^^^^^^^^

error: aborting due to 2 previous errors

